Fix Footer Body Overflow

--- a/style/scss/partials/footer.scss
+++ b/style/scss/partials/footer.scss
@@ -38,7 +38,6 @@
         .footer-bar {
             position: relative;
             background-color: $background-lightgrey;
-            width: 100vw;
             padding: 50px 0;
             display: flex;
             align-items: center;
